Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13731

RHEL 8.2: VM_FAULT_RETRY is defined in mm_types.h instead of mm.h

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • Lustre 2.14.0, Lustre 2.12.5
    • None
    • RHEL 8.2
    • 3
    • 9223372036854775807

      In RHEL 8.2 kernel 4.18.0-193.6.3.el8_2, VM_FAULT_RETRY is defined in mm_types.h instead of mm.h. While in Lustre codes, mm_types.h is not included, which causes VM_FAULT_RETRY redefined to 0 in llite_internal.h and vvp_io_kernel_fault() output the following error message:

      LustreError: 4176:0:(vvp_io.c:1222:vvp_io_kernel_fault()) unknown error in page fault 1024
      

            yujian Jian Yu
            yujian Jian Yu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: